# MO53-TD

./: .gitignore  CMakeLists.txt  average - Copie.h  average.cpp  average.h  average2.h  calculation.cpp  calculation.h  data_list.cpp  data_list.h  data_table.cpp  data_table.h  factory.cpp  factory.h  loader.cpp  loader.h  main.cpp  main2.cpp  manager.h  mngr_storages.cpp  mo54-git.pro  moving_average.cpp  moving_average.h  process.h  rolling_average.cpp  rolling_average.h  sort_table.cpp  sort_table.h  storage_type.cpp  storage_type.h  table_count.cpp  table_count.h  table_sum.cpp  table_sum.h  table_sum2.h  writer.cpp  writer.h
headers/: DataList.h  DataTable.h  Iterator.h  ListElement.h  StorageType.h  ValuesList.h  average2.h  calculation.h  data_list.h  data_table.h  moving_average.h  sort_table.h  table_count.h  table_sum.h
src/: DataList.cpp  DataTable.cpp  ValuesList.cpp  average.cpp  calculation.cpp  data_list.cpp  data_table.cpp  main.cpp  main2.cpp  moving_average.cpp  sort_table.cpp  table_count.cpp  table_sum.cpp
tests/: Tests.h  TestsValuesList.h
